fixed a couple path issues and finished off the handlebar files, now the app is working and just needs style

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
   <title>Burger Town</title>
   
   <script src="https://code.jquery.com/jquery.js"></script>
-  {{!-- <script src="/models/js/burger.js"></script> --}}
+  <script src="/js/burger.js"></script>
 </head>
 <body>
 
