--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,12 @@
 <h1>Burgers!</h1>
 
 <h2>Order a Burger</h2>
-<form class="create-form">
+<form class="order-form">
 
   <div class="form-group">
     <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
+    <input type="text" id="burger-input" name="name">
   </div>
-
-  {{!-- <div class="form-group">
-    <label for="sleepy">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div> --}}
 
   <button type="submit">Order Burger</button>
 </form>
@@ -22,7 +16,11 @@
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
-      {{> cats/cat-block sleep=true}}
+      <li class="list-item">
+          {{id}}. {{burger_name}}
+          <button type="submit" class="u-pull-right devour-btn" data-id="{{id}}" data-devoured={{devoured}}>
+          Devour</button>
+          </li>
     {{/unless}}
   {{/each}}
 </ul>
@@ -32,7 +30,9 @@
 <ul>
   {{#each burgers}}
     {{#if devoured}}
-      {{> cats/cat-block sleep=false}}
+      <li class="list-item">
+          {{id}}. {{burger_name}}
+        </li>
     {{/if}}
   {{/each}}
 </ul>
