--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,40 +1,51 @@
+
+<div class="heading-part">
 <h1>Burgers!</h1>
+</div>
 
-<h2>Order a Burger</h2>
-<form class="order-form">
+<div class="ordering">
+  <h2>Order a Burger</h2>
+  <form class="order-form">
 
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="burger-input" name="name">
-  </div>
+    <div class="form-group">
+      <label for="ca">Burger Name:</label>
+      <input type="text" id="burger-input" name="name">
+    </div>
 
-  <button type="submit">Order Burger</button>
-</form>
+    <button id="order-butt" type="submit">Order Burger</button>
+  </form>
 
-<h2>Burgers waiting to be devoured!</h2>
+</div>
 
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      <li class="list-item">
-          {{id}}. {{burger_name}}
-          <button type="submit" class="u-pull-right devour-btn" data-id="{{id}}" data-devoured={{devoured}}>
-          Devour</button>
+
+<div id="waiting">
+  <h2>Burgers waiting to be devoured!</h2>
+
+  <ul>
+    {{#each burgers}}
+      {{#unless devoured}}
+        <li class="list-item">
+            {{id}}. {{burger_name}}
+            <button type="submit" class="u-pull-right devour-btn" data-id="{{id}}" data-devoured={{devoured}}>
+            Devour</button>
+            </li>
+      {{/unless}}
+    {{/each}}
+  </ul>
+
+</div>
+
+<div id="devoured">
+  <h2>Burgers that have already been devoured!</h2>
+
+  <ul>
+    {{#each burgers}}
+      {{#if devoured}}
+        <li class="list-item">
+            {{id}}. {{burger_name}}
           </li>
-    {{/unless}}
-  {{/each}}
-</ul>
+      {{/if}}
+    {{/each}}
+  </ul>
 
-<h2>Burgers that have already been devoured!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      <li class="list-item">
-          {{id}}. {{burger_name}}
-        </li>
-    {{/if}}
-  {{/each}}
-</ul>
-
-
+</div>
